MDEXP-779 - Tech Debt: enable check-style plugin (#554)